--- a/ft/index.html
+++ b/ft/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <title>MPRIS over HTTP</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <script type="module" src="main.js"></script>
+        <style>@import "style.css"</style>
+        <script type="module">import "./main.ts"</script>
     </head>
     <body>
         <center><h1>MPRIS over HTTP</h1></center>
